# mwowm

./: .gitignore  LICENSE  README.md  meson.build
include/: cursor.h  input.h  inspect.h  mwowm.h  output.h  utils.h  xdg-shell.h
protocol/: meson.build
src/: cursor.c  input.c  inspect.c  main.c  meson.build  output.c  utils.c  xdg-shell.c
